work process section completed

--- a/index.html
+++ b/index.html
@@ -111,10 +111,10 @@
     </div>
   </header>
   <main>
-    <!-- thoughtful design and work processsection -->
+    <!-- thoughtful design and work process section -->
     <div class="bg-[#f4f4f4] py-24 max-sm:py-8">
       <!-- thoughtful design section -->
-      <div class="container max-w-8xl mx-auto grid grid-cols-2 max-sm:grid-cols-1 max-sm:w-[90%] gap-9 relative">
+      <div class="container mx-auto  grid grid-cols-2 max-sm:grid-cols-1 gap-14 max-sm:w-[90%] relative mb-24">
         <div class="absolute -top-14 -left-16 max-sm:hidden">
           <img src="./assets/Vector.png" alt="">
         </div>
@@ -150,10 +150,52 @@
         </div>
         <!-- right column -->
         <div>
-          <img src="./assets/Rectangle.png" alt="">
+          <img class="h-fit w-fit" src="./assets/Rectangle.png" alt="">
         </div>
       </div>
-    </div>
+      <!-- work process section -->
+      <div class="container mx-auto max-sm:w-[90%]">
+        <div class="flex justify-center items-center">
+          <a class="btn rounded-full bg-white px-4 py-2 text-base font-bold w-fit">
+            <i class="fa-solid fa-arrow-right"></i>
+            How We Work
+          </a>
+        </div>
+        <div>
+          <h1 class="font-bold text-4xl leading-[50px] mt-4 mb-6 text-center">Our Work Process</h1>
+          <p class="text-base font-medium opacity-90 text-center mb-8">
+            The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered
+            wood, sleek
+            metal accents.
+          </p>
+          <div class="grid grid-cols-4 gap-6 max-sm:grid-cols-1">
+            <div class="bg-[#e7c1d3] rounded-2xl p-6">
+              <img src="./assets/concept.png" alt="">
+              <h4 class="text-xl font-extrabold opacity-90 mb-3 mt-3">Concept</h4>
+              <p class="text-base font-medium opacity-60">The barn house captivates with its blend of rustic charm and
+                modern.</p>
+            </div>
+            <div class="bg-[#efda6e] rounded-2xl p-6">
+              <img src="./assets/flow-chart.png" alt="">
+              <h4 class="text-xl font-extrabold opacity-90 mb-3 mt-3">Design Process</h4>
+              <p class="text-base font-medium opacity-60">The barn house captivates with its blend of rustic charm and
+                modern.</p>
+            </div>
+            <div class="bg-[#a4dac3] rounded-2xl p-6">
+              <img src="./assets/vision.png" alt="">
+              <h4 class="text-xl font-extrabold opacity-90 mb-3 mt-3">Supervision</h4>
+              <p class="text-base font-medium opacity-60">The barn house captivates with its blend of rustic charm and
+                modern.</p>
+            </div>
+            <div class="bg-[#77aaea] rounded-2xl p-6">
+              <img src="./assets/budget-planning.png" alt="">
+              <h4 class="text-xl font-extrabold opacity-90 mb-3 mt-3">Budget Planning</h4>
+              <p class="text-base font-medium opacity-60">The barn house captivates with its blend of rustic charm and
+                modern.</p>
+            </div>
+          </div>
+        </div>
+      </div>
   </main>
   <footer>
 
