portfolio section almost done, its not responsive yet

--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
       <img class="mx-auto" src="./assets/banner.png" alt="banner">
       <h1 class="text-[4rem] font-extrabold text-center max-sm:text-3xl mt-6 w-[80%] leading-[70px] mb-7 max-sm:w-full">
         A barn house of this design has a striking appearance</h1>
-      <p class="text-base font-extrabold text-center opacity-80 w-[75%] mb-8 max-sm:w-full">The barn house captivates
+      <p class="text-base font-extrabold text-center opacity-90 w-[75%] mb-8 max-sm:text-sm max-sm:w-full">The barn
+        house captivates
         with its blend of rustic charm and modern sophistication, featuring weathered wood,
         sleek
         metal accents, and large windows that flood the space with natural light.</p>
@@ -126,24 +127,29 @@
               About Us
             </a>
           </div>
-          <h1 class="font-black text-4xl leading-[50px] mt-4 mb-5 w-[80%] max-sm:text-center max-sm:w-full">We design
+          <h1
+            class="font-black text-4xl leading-[50px] mt-4 mb-5 w-[80%] max-sm:text-2xl max-sm:text-center max-sm:w-full">
+            We design
             thoughtful, liveable spaces</h1>
-          <p class="text-base font-medium opacity-90 max-sm:text-center">The barn house captivates with its blend of
+          <p class="text-base font-medium opacity-90 max-sm:text-sm max-sm:text-center">The barn house captivates with
+            its blend of
             rustic charm and
             modern sophistication, featuring weathered wood, sleek metal accents.</p>
           <div class="flex p-7 bg-white rounded-2xl gap-4 mt-7">
             <img class="h-fit my-auto" src="./assets/commercial.png" alt="">
             <div>
-              <h3 class="text-xl font-extrabold opacity-90 mb-2">Commercial</h3>
-              <p class="text-base font-medium opacity-60">The barn house captivates with its blend of rustic charm and
+              <h3 class="text-xl font-extrabold opacity-90 mb-2 max-sm:text-lg">Commercial</h3>
+              <p class="text-base font-medium opacity-60 max-sm:text-sm">The barn house captivates with its blend of
+                rustic charm and
                 modern.</p>
             </div>
           </div>
           <div class="flex p-7 bg-white rounded-2xl gap-4 mt-6">
             <img class="h-fit my-auto" src="./assets/residential.png" alt="">
             <div>
-              <h3 class="text-xl font-extrabold opacity-90 mb-2">Residential</h3>
-              <p class="text-base font-medium opacity-60">The barn house captivates with its blend of rustic charm and
+              <h3 class="text-xl font-extrabold opacity-90 mb-2 max-sm:text-lg">Residential</h3>
+              <p class="text-base font-medium opacity-60 max-sm:text-sm">The barn house captivates with its blend of
+                rustic charm and
                 modern.</p>
             </div>
           </div>
@@ -162,8 +168,8 @@
           </a>
         </div>
         <div>
-          <h1 class="font-bold text-4xl leading-[50px] mt-4 mb-6 text-center">Our Work Process</h1>
-          <p class="text-base font-medium opacity-90 text-center mb-8">
+          <h1 class="font-black text-4xl leading-[50px] mt-4 mb-6 text-center max-sm:text-2xl">Our Work Process</h1>
+          <p class="text-base font-medium opacity-90 text-center max-sm:text-sm mb-8">
             The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered
             wood, sleek
             metal accents.
@@ -171,31 +177,97 @@
           <div class="grid grid-cols-4 gap-6 max-sm:grid-cols-1">
             <div class="bg-[#e7c1d3] rounded-2xl p-6">
               <img src="./assets/concept.png" alt="">
-              <h4 class="text-xl font-extrabold opacity-90 mb-3 mt-3">Concept</h4>
-              <p class="text-base font-medium opacity-60">The barn house captivates with its blend of rustic charm and
+              <h4 class="text-xl font-extrabold opacity-90 mb-3 mt-3 max-sm:text-lg">Concept</h4>
+              <p class="text-base font-medium opacity-60 max-sm:text-sm">The barn house captivates with its blend of
+                rustic charm and
                 modern.</p>
             </div>
             <div class="bg-[#efda6e] rounded-2xl p-6">
               <img src="./assets/flow-chart.png" alt="">
-              <h4 class="text-xl font-extrabold opacity-90 mb-3 mt-3">Design Process</h4>
-              <p class="text-base font-medium opacity-60">The barn house captivates with its blend of rustic charm and
+              <h4 class="text-xl font-extrabold opacity-90 mb-3 mt-3 max-sm:text-lg">Design Process</h4>
+              <p class="text-base font-medium opacity-60 max-sm:text-sm">The barn house captivates with its blend of
+                rustic charm and
                 modern.</p>
             </div>
             <div class="bg-[#a4dac3] rounded-2xl p-6">
               <img src="./assets/vision.png" alt="">
-              <h4 class="text-xl font-extrabold opacity-90 mb-3 mt-3">Supervision</h4>
-              <p class="text-base font-medium opacity-60">The barn house captivates with its blend of rustic charm and
+              <h4 class="text-xl font-extrabold opacity-90 mb-3 mt-3 max-sm:text-lg">Supervision</h4>
+              <p class="text-base font-medium opacity-60 max-sm:text-sm">The barn house captivates with its blend of
+                rustic charm and
                 modern.</p>
             </div>
             <div class="bg-[#77aaea] rounded-2xl p-6">
               <img src="./assets/budget-planning.png" alt="">
-              <h4 class="text-xl font-extrabold opacity-90 mb-3 mt-3">Budget Planning</h4>
-              <p class="text-base font-medium opacity-60">The barn house captivates with its blend of rustic charm and
+              <h4 class="text-xl font-extrabold opacity-90 mb-3 mt-3 max-sm:text-lg">Budget Planning</h4>
+              <p class="text-base font-medium opacity-60 max-sm:text-sm">The barn house captivates with its blend of
+                rustic charm and
                 modern.</p>
             </div>
           </div>
         </div>
       </div>
+    </div>
+
+    <!-- portfolio section -->
+    <div class="container mx-auto max-sm:w-[90%] py-24">
+      <div>
+        <div class="flex justify-center items-center">
+          <a class="btn rounded-full bg-[#eefcdf] px-4 py-2 text-base font-bold w-fit">
+            <i class="fa-solid fa-arrow-right"></i>
+            Explore Our Latest Works
+          </a>
+        </div>
+        <h1 class="font-black text-4xl leading-[50px] text-center mt-4 mb-6 max-sm:text-2xl">Our Latest Portfolio</h1>
+        <p class="text-base font-medium opacity-90 text-center max-sm:text-sm">The barn house captivates with its blend
+          of rustic charm and modern sophistication, featuring weathered wood, sleek
+          metal accents.</p>
+      </div>
+      <!-- challenge grid section -->
+      <div class="mt-8 grid grid-cols-12 grid-rows-2 gap-6 max-sm:grid-cols-1 max-sm:grid-rows-5">
+        <div class="border-2 border-gray-200 rounded-2xl p-6 col-span-8 flex gap-6 max-sm:col-span-1 max-sm:flex-col">
+          <div>
+            <img class="h-full" src="./assets/img1.png" alt="">
+          </div>
+          <div class="flex flex-col gap-4 justify-center">
+            <h3 class="text-xl font-extrabold opacity-90 mb-2 max-sm:text-lg">Commercial</h3>
+            <p class="text-base font-medium opacity-60 max-sm:text-sm">The barn house captivates with its blend of
+              rustic charm and
+              modern.</p>
+            <div class="flex gap-2 ">
+              <h4 class="text-xl font-extrabold">View Details</h4>
+              <div class="rounded-[50%] bg-bg-btn px-2 py-0.5 flex items-center justify-center"><i
+                  class="fa-solid fa-arrow-right text-center -rotate-45 text-lg"></i></div>
+            </div>
+          </div>
+        </div>
+        <div class="border-2 border-gray-200 rounded-2xl p-6 col-span-4 max-sm:col-span-1">
+          <img class="h-fit w-full" src="./assets/img2.png" alt="">
+        </div>
+        <div class="border-2 border-gray-200 rounded-2xl p-6 col-span-3 max-sm:col-span-1">
+          <img class="h-fit w-full" src="./assets/img3.png" alt="">
+        </div>
+        <div class="border-2 border-gray-200 rounded-2xl p-6 col-span-6 flex gap-6 max-sm:col-span-1 max-sm:flex-col">
+          <div class="h-full w-[100%]">
+            <img class="h-full w-full" src="./assets/img4.png" alt="">
+          </div>
+          <div class="flex flex-col gap-4 justify-center">
+            <h3 class="text-xl font-extrabold opacity-90 mb-2 max-sm:text-lg">Commercial</h3>
+            <p class="text-base font-medium opacity-60 max-sm:text-sm">The barn house captivates with its blend of
+              rustic charm and
+              modern.</p>
+            <div class="flex gap-2 ">
+              <h4 class="text-xl font-extrabold">View Details</h4>
+              <div class="rounded-[50%] bg-bg-btn px-2 py-0.5 flex items-center justify-center"><i
+                  class="fa-solid fa-arrow-right text-center -rotate-45 text-lg"></i></div>
+            </div>
+          </div>
+        </div>
+        <div class="border-2 border-gray-200 rounded-2xl p-6 col-span-3 max-sm:col-span-1">
+          <img class="h-fit w-full" src="./assets/img5.png" alt="">
+        </div>
+
+      </div>
+    </div>
   </main>
   <footer>
 
