made portfolio section responsive

--- a/index.html
+++ b/index.html
@@ -223,18 +223,20 @@
           metal accents.</p>
       </div>
       <!-- challenge grid section -->
-      <div class="mt-8 grid grid-cols-12 grid-rows-2 gap-6 max-sm:grid-cols-1 max-sm:grid-rows-5">
+      <div class="mt-8 grid grid-cols-12 gap-6 max-sm:grid-cols-1">
         <div class="border-2 border-gray-200 rounded-2xl p-6 col-span-8 flex gap-6 max-sm:col-span-1 max-sm:flex-col">
-          <div>
-            <img class="h-full" src="./assets/img1.png" alt="">
+          <div class="max-sm:h-full max-sm:w-full">
+            <img class="h-full max-sm:w-full" src="./assets/img1.png" alt="">
           </div>
           <div class="flex flex-col gap-4 justify-center">
             <h3 class="text-xl font-extrabold opacity-90 mb-2 max-sm:text-lg">Commercial</h3>
             <p class="text-base font-medium opacity-60 max-sm:text-sm">The barn house captivates with its blend of
               rustic charm and
+              modern. The barn house captivates with its blend of
+              rustic charm and
               modern.</p>
             <div class="flex gap-2 ">
-              <h4 class="text-xl font-extrabold">View Details</h4>
+              <h4 class="text-xl font-extrabold max-sm:text-base">View Details</h4>
               <div class="rounded-[50%] bg-bg-btn px-2 py-0.5 flex items-center justify-center"><i
                   class="fa-solid fa-arrow-right text-center -rotate-45 text-lg"></i></div>
             </div>
@@ -256,7 +258,7 @@
               rustic charm and
               modern.</p>
             <div class="flex gap-2 ">
-              <h4 class="text-xl font-extrabold">View Details</h4>
+              <h4 class="text-xl font-extrabold max-sm:text-base">View Details</h4>
               <div class="rounded-[50%] bg-bg-btn px-2 py-0.5 flex items-center justify-center"><i
                   class="fa-solid fa-arrow-right text-center -rotate-45 text-lg"></i></div>
             </div>
