fixed some problems of grid elements

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     <!-- thoughtful design and work process section -->
     <div class="bg-[#f4f4f4] py-24 max-sm:py-8">
       <!-- thoughtful design section -->
-      <div class="container mx-auto  grid grid-cols-2 max-sm:grid-cols-1 gap-14 max-sm:w-[90%] relative mb-24">
+      <div class="container mx-auto  grid grid-cols-2 max-sm:grid-cols-1 gap-14 max-sm:w-[90%] relative mb-24 max-sm:mb-10">
         <div class="absolute -top-14 -left-16 max-sm:hidden">
           <img src="./assets/Vector.png" alt="">
         </div>
@@ -209,7 +209,7 @@
     </div>
 
     <!-- portfolio section -->
-    <div class="container mx-auto max-sm:w-[90%] py-24">
+    <div class="container mx-auto max-sm:w-[90%] py-24 max-sm:py-10">
       <div>
         <div class="flex justify-center items-center">
           <a class="btn rounded-full bg-[#eefcdf] px-4 py-2 text-base font-bold w-fit">
@@ -225,8 +225,8 @@
       <!-- challenge grid section -->
       <div class="mt-8 grid grid-cols-12 gap-6 max-sm:grid-cols-1">
         <div class="border-2 border-gray-200 rounded-2xl p-6 col-span-8 flex gap-6 max-sm:col-span-1 max-sm:flex-col">
-          <div class="max-sm:h-full max-sm:w-full">
-            <img class="h-full max-sm:w-full" src="./assets/img1.png" alt="">
+          <div class="h-full w-full">
+            <img class="h-full w-full" src="./assets/img1.png" alt="">
           </div>
           <div class="flex flex-col gap-4 justify-center">
             <h3 class="text-xl font-extrabold opacity-90 mb-2 max-sm:text-lg">Commercial</h3>
@@ -270,6 +270,8 @@
 
       </div>
     </div>
+
+    <!-- articles and news section -->
   </main>
   <footer>
 
