--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
   <!-- daisyui and tailwind -->
-  <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
+  <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css">
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     tailwind.config = {
@@ -115,7 +115,8 @@
     <!-- thoughtful design and work process section -->
     <div class="bg-[#f4f4f4] py-24 max-sm:py-8">
       <!-- thoughtful design section -->
-      <div class="container mx-auto  grid grid-cols-2 max-sm:grid-cols-1 gap-14 max-sm:w-[90%] relative mb-24 max-sm:mb-10">
+      <div
+        class="container mx-auto  grid grid-cols-2 max-sm:grid-cols-1 gap-14 max-sm:w-[90%] relative mb-24 max-sm:mb-10">
         <div class="absolute -top-14 -left-16 max-sm:hidden">
           <img src="./assets/Vector.png" alt="">
         </div>
@@ -243,10 +244,10 @@
           </div>
         </div>
         <div class="border-2 border-gray-200 rounded-2xl p-6 col-span-4 max-sm:col-span-1">
-          <img class="h-fit w-full" src="./assets/img2.png" alt="">
+          <img class="h-full w-full" src="./assets/img2.png" alt="">
         </div>
         <div class="border-2 border-gray-200 rounded-2xl p-6 col-span-3 max-sm:col-span-1">
-          <img class="h-fit w-full" src="./assets/img3.png" alt="">
+          <img class="h-full w-full" src="./assets/img3.png" alt="">
         </div>
         <div class="border-2 border-gray-200 rounded-2xl p-6 col-span-6 flex gap-6 max-sm:col-span-1 max-sm:flex-col">
           <div class="h-full w-[100%]">
@@ -265,13 +266,140 @@
           </div>
         </div>
         <div class="border-2 border-gray-200 rounded-2xl p-6 col-span-3 max-sm:col-span-1">
-          <img class="h-fit w-full" src="./assets/img5.png" alt="">
+          <img class="h-full w-full" src="./assets/img5.png" alt="">
         </div>
 
       </div>
     </div>
 
     <!-- articles and news section -->
+    <div class="bg-[#f4f4f4] py-24 max-sm:py-8">
+      <div class="container mx-auto max-sm:w-[90%]">
+        <div class="flex justify-center items-center">
+          <a class="btn rounded-full bg-[#eefcdf] px-4 py-2 text-base font-bold w-fit">
+            <i class="fa-solid fa-arrow-right"></i>
+            Rinterio News
+          </a>
+        </div>
+        <div>
+          <h1 class="font-black text-4xl leading-[50px] mt-4 mb-6 max-sm:text-2xl text-center">Read Our Articles and
+            News</h1>
+          <p class="text-base font-medium opacity-90 max-sm:text-sm text-center">The barn house captivates with its
+            blend of rustic
+            charm and modern sophistication, featuring weathered wood, sleek
+            metal accents.</p>
+        </div>
+        <div class="flex items-center justify-center">
+          <div class="grid grid-cols-3 gap-6 mt-8 max-sm:grid-cols-1 mx-auto">
+            <div class="card p-6 bg-base-100 w-96 shadow-xl">
+              <figure class="">
+                <img src="./assets/article1.png" alt="Shoes"
+                  class="rounded-xl" />
+              </figure>
+              <div class="flex items-center gap-4 mt-4 mb-2">
+                <div class="flex gap-2 items-center ">
+                  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                    stroke="currentColor" class="size-6">
+                    <path stroke-linecap="round" stroke-linejoin="round"
+                      d="M6.75 2.994v2.25m10.5-2.25v2.25m-14.252 13.5V7.491a2.25 2.25 0 0 1 2.25-2.25h13.5a2.25 2.25 0 0 1 2.25 2.25v11.251m-18 0a2.25 2.25 0 0 0 2.25 2.25h13.5a2.25 2.25 0 0 0 2.25-2.25m-18 0v-7.5a2.25 2.25 0 0 1 2.25-2.25h13.5a2.25 2.25 0 0 1 2.25 2.25v7.5m-6.75-6h2.25m-9 2.25h4.5m.002-2.25h.005v.006H12v-.006Zm-.001 4.5h.006v.006h-.006v-.005Zm-2.25.001h.005v.006H9.75v-.006Zm-2.25 0h.005v.005h-.006v-.005Zm6.75-2.247h.005v.005h-.005v-.005Zm0 2.247h.006v.006h-.006v-.006Zm2.25-2.248h.006V15H16.5v-.005Z" />
+                  </svg>
+                  <p class="text-sm font-medium opacity-60 max-sm:text-xs">July 14, 2024</p>
+                </div>
+                <div class="flex gap-2 items-center ">
+                  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                    stroke="currentColor" class="size-6">
+                    <path stroke-linecap="round" stroke-linejoin="round"
+                      d="M17.982 18.725A7.488 7.488 0 0 0 12 15.75a7.488 7.488 0 0 0-5.982 2.975m11.963 0a9 9 0 1 0-11.963 0m11.963 0A8.966 8.966 0 0 1 12 21a8.966 8.966 0 0 1-5.982-2.275M15 9.75a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
+                  </svg>
+                  <p class="text-sm font-medium opacity-60 max-sm:text-xs">By Admin</p>
+                </div>
+              </div>
+              <div class="text">
+                <h2 class="text-xl font-extrabold opacity-80 mb-2 max-sm:text-lg">How to choose the furniture right of
+                  your home.</h2>
+                <p class="text-base font-medium opacity-60 max-sm:text-sm my-3">The barn house captivates with its blend of
+                  rustic charm and modern.</p>
+                <div class="flex gap-2 ">
+                  <h4 class="text-xl font-extrabold max-sm:text-base">Read More</h4>
+                  <div class="rounded-[50%] bg-bg-btn px-2 max-sm:px-1.5 py-0.5 flex items-center justify-center"><i
+                      class="fa-solid fa-arrow-right text-center -rotate-45 text-lg max-sm:text-sm"></i></div>
+                </div>
+              </div>
+            </div>
+            <div class="card p-6 bg-base-100 w-96 shadow-xl">
+              <figure class="">
+                <img src="./assets/article2.png" alt="Shoes"
+                  class="rounded-xl" />
+              </figure>
+              <div class="flex items-center gap-4 mt-4 mb-2">
+                <div class="flex gap-2 items-center ">
+                  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                    stroke="currentColor" class="size-6">
+                    <path stroke-linecap="round" stroke-linejoin="round"
+                      d="M6.75 2.994v2.25m10.5-2.25v2.25m-14.252 13.5V7.491a2.25 2.25 0 0 1 2.25-2.25h13.5a2.25 2.25 0 0 1 2.25 2.25v11.251m-18 0a2.25 2.25 0 0 0 2.25 2.25h13.5a2.25 2.25 0 0 0 2.25-2.25m-18 0v-7.5a2.25 2.25 0 0 1 2.25-2.25h13.5a2.25 2.25 0 0 1 2.25 2.25v7.5m-6.75-6h2.25m-9 2.25h4.5m.002-2.25h.005v.006H12v-.006Zm-.001 4.5h.006v.006h-.006v-.005Zm-2.25.001h.005v.006H9.75v-.006Zm-2.25 0h.005v.005h-.006v-.005Zm6.75-2.247h.005v.005h-.005v-.005Zm0 2.247h.006v.006h-.006v-.006Zm2.25-2.248h.006V15H16.5v-.005Z" />
+                  </svg>
+                  <p class="text-sm font-medium opacity-60 max-sm:text-xs">July 14, 2024</p>
+                </div>
+                <div class="flex gap-2 items-center ">
+                  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                    stroke="currentColor" class="size-6">
+                    <path stroke-linecap="round" stroke-linejoin="round"
+                      d="M17.982 18.725A7.488 7.488 0 0 0 12 15.75a7.488 7.488 0 0 0-5.982 2.975m11.963 0a9 9 0 1 0-11.963 0m11.963 0A8.966 8.966 0 0 1 12 21a8.966 8.966 0 0 1-5.982-2.275M15 9.75a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
+                  </svg>
+                  <p class="text-sm font-medium opacity-60 max-sm:text-xs">By Admin</p>
+                </div>
+              </div>
+              <div class="text">
+                <h2 class="text-xl font-extrabold opacity-80 mb-2 max-sm:text-lg">How to choose the furniture right of
+                  your home.</h2>
+                <p class="text-base font-medium opacity-60 max-sm:text-sm my-3">The barn house captivates with its blend of
+                  rustic charm and modern.</p>
+                <div class="flex gap-2 ">
+                  <h4 class="text-xl font-extrabold max-sm:text-base">Read More</h4>
+                  <div class="rounded-[50%] bg-bg-btn px-2 max-sm:px-1.5 py-0.5 flex items-center justify-center"><i
+                      class="fa-solid fa-arrow-right text-center -rotate-45 text-lg max-sm:text-sm"></i></div>
+                </div>
+              </div>
+            </div>
+            <div class="card p-6 bg-base-100 w-96 shadow-xl">
+              <figure class="">
+                <img src="./assets/article3.png" alt="Shoes"
+                  class="rounded-xl" />
+              </figure>
+              <div class="flex items-center gap-4 mt-4 mb-2">
+                <div class="flex gap-2 items-center ">
+                  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                    stroke="currentColor" class="size-6">
+                    <path stroke-linecap="round" stroke-linejoin="round"
+                      d="M6.75 2.994v2.25m10.5-2.25v2.25m-14.252 13.5V7.491a2.25 2.25 0 0 1 2.25-2.25h13.5a2.25 2.25 0 0 1 2.25 2.25v11.251m-18 0a2.25 2.25 0 0 0 2.25 2.25h13.5a2.25 2.25 0 0 0 2.25-2.25m-18 0v-7.5a2.25 2.25 0 0 1 2.25-2.25h13.5a2.25 2.25 0 0 1 2.25 2.25v7.5m-6.75-6h2.25m-9 2.25h4.5m.002-2.25h.005v.006H12v-.006Zm-.001 4.5h.006v.006h-.006v-.005Zm-2.25.001h.005v.006H9.75v-.006Zm-2.25 0h.005v.005h-.006v-.005Zm6.75-2.247h.005v.005h-.005v-.005Zm0 2.247h.006v.006h-.006v-.006Zm2.25-2.248h.006V15H16.5v-.005Z" />
+                  </svg>
+                  <p class="text-sm font-medium opacity-60 max-sm:text-xs">July 14, 2024</p>
+                </div>
+                <div class="flex gap-2 items-center ">
+                  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                    stroke="currentColor" class="size-6">
+                    <path stroke-linecap="round" stroke-linejoin="round"
+                      d="M17.982 18.725A7.488 7.488 0 0 0 12 15.75a7.488 7.488 0 0 0-5.982 2.975m11.963 0a9 9 0 1 0-11.963 0m11.963 0A8.966 8.966 0 0 1 12 21a8.966 8.966 0 0 1-5.982-2.275M15 9.75a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
+                  </svg>
+                  <p class="text-sm font-medium opacity-60 max-sm:text-xs">By Admin</p>
+                </div>
+              </div>
+              <div class="text">
+                <h2 class="text-xl font-extrabold opacity-80 mb-2 max-sm:text-lg">How to choose the furniture right of
+                  your home.</h2>
+                <p class="text-base font-medium opacity-60 max-sm:text-sm my-3">The barn house captivates with its blend of
+                  rustic charm and modern.</p>
+                <div class="flex gap-2 ">
+                  <h4 class="text-xl font-extrabold max-sm:text-base">Read More</h4>
+                  <div class="rounded-[50%] bg-bg-btn px-2 max-sm:px-1.5 py-0.5 flex items-center justify-center"><i
+                      class="fa-solid fa-arrow-right text-center -rotate-45 text-lg max-sm:text-sm"></i></div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </main>
   <footer>
 
