--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <a class="btn btn-ghost text-3xl font-black">
             <div class="rounded-[50%] bg-bg-btn px-2 py-0.5 flex items-center justify-center"><i
                 class="fa-solid fa-arrow-right text-center -rotate-45 text-lg"></i></div>
-            Rinterio
+            <h1>Rinterio</h1>
           </a>
         </div>
         <div class="navbar-center hidden lg:flex">
@@ -71,7 +71,7 @@
               </svg>
             </div>
             <a class="btn bg-bg-btn font-black rounded-full">
-              Book Consult
+              <h1>Book Consult</h1>
               <div class="rounded-[50%] bg-black text-white px-1.5"><i
                   class="fa-solid fa-arrow-right -rotate-45 text-xl"></i></div>
             </a>
@@ -293,8 +293,7 @@
           <div class="grid grid-cols-3 gap-6 mt-8 max-sm:grid-cols-1 mx-auto">
             <div class="card p-6 bg-base-100 w-96 shadow-xl">
               <figure class="">
-                <img src="./assets/article1.png" alt="Shoes"
-                  class="rounded-xl" />
+                <img src="./assets/article1.png" alt="Shoes" class="rounded-xl" />
               </figure>
               <div class="flex items-center gap-4 mt-4 mb-2">
                 <div class="flex gap-2 items-center ">
@@ -317,7 +316,8 @@
               <div class="text">
                 <h2 class="text-xl font-extrabold opacity-80 mb-2 max-sm:text-lg">How to choose the furniture right of
                   your home.</h2>
-                <p class="text-base font-medium opacity-60 max-sm:text-sm my-3">The barn house captivates with its blend of
+                <p class="text-base font-medium opacity-60 max-sm:text-sm my-3">The barn house captivates with its blend
+                  of
                   rustic charm and modern.</p>
                 <div class="flex gap-2 ">
                   <h4 class="text-xl font-extrabold max-sm:text-base">Read More</h4>
@@ -328,8 +328,7 @@
             </div>
             <div class="card p-6 bg-base-100 w-96 shadow-xl">
               <figure class="">
-                <img src="./assets/article2.png" alt="Shoes"
-                  class="rounded-xl" />
+                <img src="./assets/article2.png" alt="Shoes" class="rounded-xl" />
               </figure>
               <div class="flex items-center gap-4 mt-4 mb-2">
                 <div class="flex gap-2 items-center ">
@@ -352,7 +351,8 @@
               <div class="text">
                 <h2 class="text-xl font-extrabold opacity-80 mb-2 max-sm:text-lg">How to choose the furniture right of
                   your home.</h2>
-                <p class="text-base font-medium opacity-60 max-sm:text-sm my-3">The barn house captivates with its blend of
+                <p class="text-base font-medium opacity-60 max-sm:text-sm my-3">The barn house captivates with its blend
+                  of
                   rustic charm and modern.</p>
                 <div class="flex gap-2 ">
                   <h4 class="text-xl font-extrabold max-sm:text-base">Read More</h4>
@@ -363,8 +363,7 @@
             </div>
             <div class="card p-6 bg-base-100 w-96 shadow-xl">
               <figure class="">
-                <img src="./assets/article3.png" alt="Shoes"
-                  class="rounded-xl" />
+                <img src="./assets/article3.png" alt="Shoes" class="rounded-xl" />
               </figure>
               <div class="flex items-center gap-4 mt-4 mb-2">
                 <div class="flex gap-2 items-center ">
@@ -387,7 +386,8 @@
               <div class="text">
                 <h2 class="text-xl font-extrabold opacity-80 mb-2 max-sm:text-lg">How to choose the furniture right of
                   your home.</h2>
-                <p class="text-base font-medium opacity-60 max-sm:text-sm my-3">The barn house captivates with its blend of
+                <p class="text-base font-medium opacity-60 max-sm:text-sm my-3">The barn house captivates with its blend
+                  of
                   rustic charm and modern.</p>
                 <div class="flex gap-2 ">
                   <h4 class="text-xl font-extrabold max-sm:text-base">Read More</h4>
@@ -400,9 +400,48 @@
         </div>
       </div>
     </div>
-  </main>
-  <footer>
 
+    <!-- next project section -->
+    <div class="bg-no-repeat bg-center bg-cover h-fit w-full py-24 max-sm:py-8"
+      style="background-image: url('./assets/bg.jpg');">
+      <div class="container w-[72%] mx-auto max-sm:w-[90%]">
+        <div class="flex justify-center items-center">
+          <a class="btn rounded-full bg-[#eefcdf] px-4 py-2 text-base font-bold w-fit">
+            <i class="fa-solid fa-arrow-right"></i>
+            Let's Connect
+          </a>
+        </div>
+        <div>
+          <h1 class="font-black text-4xl leading-[50px] mt-4 mb-6 max-sm:text-2xl text-center">Let's Discuss Next
+            Project</h1>
+          <p class="text-base font-medium opacity-90 max-sm:text-sm text-center">The barn house captivates with its
+            blend of rustic
+            charm and modern sophistication, featuring weathered wood, sleek
+            metal accents.</p>
+        </div>
+        <div class="mt-8">
+          <div class="grid grid-cols-2 gap-6 max-sm:grid-cols-1">
+            <input type="text" placeholder="First Name*" class="input rounded-2xl w-full" />
+            <input type="text" placeholder="Last Name*" class="input rounded-2xl w-full" />
+            <input type="text" placeholder="Phone Number*" class="input rounded-2xl w-full" />
+            <input type="text" placeholder="Email Address*" class="input rounded-2xl w-full" />
+          </div>
+          <div class="mt-6">
+            <textarea class="textarea w-full h-36 rounded-2xl text-base"
+              placeholder="Write your message here"></textarea>
+            <a class="btn bg-bg-btn font-black w-full mt-6 rounded-full">
+              Send Mail
+              <div class="rounded-[50%] bg-black text-white px-1.5"><i
+                  class="fa-solid fa-arrow-right -rotate-45 text-xl"></i></div>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </main>
+  <!-- footer -->
+  <footer class="bg-[#1c1c1c] py-24 max-sm:py-9">
+    
   </footer>
 </body>
 
