footer completed, now only unique section remains

--- a/index.html
+++ b/index.html
@@ -441,7 +441,30 @@
   </main>
   <!-- footer -->
   <footer class="bg-[#1c1c1c] py-24 max-sm:py-9">
-    
+    <div class="container flex flex-col items-center justify-center w-[72%] mx-auto max-sm:w-[90%]">
+      <a class="btn btn-ghost text-3xl font-black">
+        <div class="rounded-[50%] bg-bg-btn px-2 py-0.5 flex items-center justify-center"><i
+            class="fa-solid fa-arrow-right text-center -rotate-45 text-lg"></i></div>
+        <span class="text-white">Rinterio</span>
+      </a>
+      <p
+        class="text-base font-medium opacity-60 text-white mt-4 mb-12 w-[70%] text-center max-sm:mb-7 max-sm:w-[90%] max-sm:text-sm">
+        The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood,
+        sleek
+        metal accents.</p>
+      <div class="flex items-center lg:justify-around max-sm:gap-3 w-[80%] max-sm:flex-col ">
+        <h5 class="text-white text-base font-medium">Home</h5>
+        <h5 class="text-white text-base font-medium">Services</h5>
+        <h5 class="text-white text-base font-medium">Portfolio</h5>
+        <h5 class="text-white text-base font-medium">Blog</h5>
+        <h5 class="text-white text-base font-medium">Contact Us</h5>
+      </div>
+      <a class="btn bg-bg-btn font-black rounded-full mt-12 max-sm:mt-7">
+        <h1>Book Consult</h1>
+        <div class="rounded-[50%] bg-black text-white px-1.5"><i class="fa-solid fa-arrow-right -rotate-45 text-xl"></i>
+        </div>
+      </a>
+    </div>
   </footer>
 </body>
 
