--- a/index.html
+++ b/index.html
@@ -401,6 +401,200 @@
       </div>
     </div>
 
+    <!-- happy clients section -->
+    <div class="container mx-auto max-sm:w-[90%] py-24 max-sm:py-8">
+      <div class="flex justify-center items-center">
+        <a class="btn rounded-full bg-[#eefcdf] px-4 py-2 text-base font-bold w-fit">
+          <i class="fa-solid fa-arrow-right"></i>
+          Our Clients
+        </a>
+      </div>
+      <div class="mb-8">
+        <h1 class="font-black text-4xl leading-[50px] mt-4 mb-6 max-sm:text-2xl text-center">Meet Our Happy Clients</h1>
+        <p class="text-base font-medium opacity-90 max-sm:text-sm text-center">The barn house captivates with its
+          blend of rustic
+          charm and modern sophistication, featuring weathered wood, sleek
+          metal accents.</p>
+      </div>
+      <div class="flex flex-col items-center">
+        <div class="grid grid-cols-3 gap-4 max-sm:grid-cols-1">
+          <div
+            class="card bg-base-100 w-96 p-5 pb-8 shadow-[0px_0px_0px_1px_rgba(0,0,0,0.06),0px_1px_1px_-0.5px_rgba(0,0,0,0.06),0px_3px_3px_-1.5px_rgba(0,0,0,0.06),_0px_6px_6px_-3px_rgba(0,0,0,0.06),0px_12px_12px_-6px_rgba(0,0,0,0.06),0px_24px_24px_-12px_rgba(0,0,0,0.06)] hover:shadow-[0px_10px_1px_rgba(221,_221,_221,_1),_0_10px_20px_rgba(204,_204,_204,_1)] transition duration-300">
+            <figure class="pt-4 pb-5">
+              <div class="avatar">
+                <div class="ring-primary ring-[#ABEF5F] ring-offset-base-100 w-40 rounded-full ring ring-offset-2">
+                  <img src="./assets/me.jpg" />
+                </div>
+              </div>
+            </figure>
+            <div class="flex flex-col items-center text-center flex-grow">
+              <p class="font-bold">II Shimul</p>
+              <p class="text-sm opacity-70 mt-1 mb-3">CEO, Bax Corp.</p>
+              <div class="flex flex-col items-center flex-grow justify-between">
+                <h2 class="card-title text-base font-bold">"The team's efficiency was impressive! They completed our
+                  office
+                  renovation ahead of
+                  schedule without compromising on
+                  quality."</h2>
+                <div class="card-actions mt-4">
+                  <div class="rating">
+                    <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" />
+                    <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" />
+                    <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" />
+                    <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" checked="checked" />
+                    <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" />
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div
+            class="card bg-base-100 w-96 p-5 pb-8 shadow-[0px_0px_0px_1px_rgba(0,0,0,0.06),0px_1px_1px_-0.5px_rgba(0,0,0,0.06),0px_3px_3px_-1.5px_rgba(0,0,0,0.06),_0px_6px_6px_-3px_rgba(0,0,0,0.06),0px_12px_12px_-6px_rgba(0,0,0,0.06),0px_24px_24px_-12px_rgba(0,0,0,0.06)] hover:shadow-[0px_10px_1px_rgba(221,_221,_221,_1),_0_10px_20px_rgba(204,_204,_204,_1)] transition duration-300">
+            <figure class="pt-4 pb-5">
+              <div class="avatar">
+                <div class="ring-primary ring-[#ABEF5F] ring-offset-base-100 w-40 rounded-full ring ring-offset-2">
+                  <img src="./assets/Albert-Einstein.webp" />
+                </div>
+              </div>
+            </figure>
+            <div class="flex flex-col items-center text-center flex-grow">
+              <p class="font-bold">Albert Einstein</p>
+              <p class="text-sm opacity-70 mt-1 mb-3">Representative, Physics</p>
+              <div class="flex flex-col items-center flex-grow justify-between">
+                <h2 class="card-title text-base font-bold">"Our investment in their design services paid off tenfold.
+                  The
+                  new space has significantly boosted employee productivity
+                  and client satisfaction."</h2>
+                <div class="card-actions mt-4">
+                  <div class="rating">
+                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked="checked" />
+                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div
+            class="card bg-base-100 w-96 p-5 pb-8 shadow-[0px_0px_0px_1px_rgba(0,0,0,0.06),0px_1px_1px_-0.5px_rgba(0,0,0,0.06),0px_3px_3px_-1.5px_rgba(0,0,0,0.06),_0px_6px_6px_-3px_rgba(0,0,0,0.06),0px_12px_12px_-6px_rgba(0,0,0,0.06),0px_24px_24px_-12px_rgba(0,0,0,0.06)] hover:shadow-[0px_10px_1px_rgba(221,_221,_221,_1),_0_10px_20px_rgba(204,_204,_204,_1)] transition duration-300">
+            <figure class="pt-4 pb-5">
+              <div class="avatar">
+                <div class="ring-primary ring-[#ABEF5F] ring-offset-base-100 w-40 rounded-full ring ring-offset-2">
+                  <img src="./assets/newton.avif" />
+                </div>
+              </div>
+            </figure>
+            <div class="flex flex-col items-center text-center flex-grow">
+              <p class="font-bold">Issac Newton</p>
+              <p class="text-sm opacity-70 mt-1 mb-3">CEO, Calculus</p>
+              <div class="flex flex-col items-center flex-grow justify-between">
+                <h2 class="card-title text-base font-bold">"Their innovative approach to design blew us away. The space
+                  they
+                  created is as functional as it is inspiring."</h2>
+                <div class="card-actions mt-4">
+                  <div class="rating">
+                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked="checked" />
+                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div
+            class="card bg-base-100 w-96 p-5 pb-8 shadow-[0px_0px_0px_1px_rgba(0,0,0,0.06),0px_1px_1px_-0.5px_rgba(0,0,0,0.06),0px_3px_3px_-1.5px_rgba(0,0,0,0.06),_0px_6px_6px_-3px_rgba(0,0,0,0.06),0px_12px_12px_-6px_rgba(0,0,0,0.06),0px_24px_24px_-12px_rgba(0,0,0,0.06)] hover:shadow-[0px_10px_1px_rgba(221,_221,_221,_1),_0_10px_20px_rgba(204,_204,_204,_1)] transition duration-300">
+            <figure class="pt-4 pb-5">
+              <div class="avatar">
+                <div class="ring-primary ring-[#ABEF5F] ring-offset-base-100 w-40 rounded-full ring ring-offset-2">
+                  <img src="./assets/elon-musk.jpg" />
+                </div>
+              </div>
+            </figure>
+            <div class="flex flex-col items-center text-center flex-grow">
+              <p class="font-bold">Elon Musk</p>
+              <p class="text-sm opacity-70 mt-1 mb-3">CEO, Tesla</p>
+              <div class="flex flex-col items-center flex-grow justify-between">
+                <h2 class="card-title text-base font-bold">"Their understanding of the tech industry's unique needs was
+                  evident from the start. The end result was a modern,
+                  functional workspace that our team loves."</h2>
+                <div class="card-actions mt-4">
+                  <div class="rating">
+                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked="checked" />
+                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div
+            class="card bg-base-100 w-96 p-5 pb-8 shadow-[0px_0px_0px_1px_rgba(0,0,0,0.06),0px_1px_1px_-0.5px_rgba(0,0,0,0.06),0px_3px_3px_-1.5px_rgba(0,0,0,0.06),_0px_6px_6px_-3px_rgba(0,0,0,0.06),0px_12px_12px_-6px_rgba(0,0,0,0.06),0px_24px_24px_-12px_rgba(0,0,0,0.06)] hover:shadow-[0px_10px_1px_rgba(221,_221,_221,_1),_0_10px_20px_rgba(204,_204,_204,_1)] transition duration-300">
+            <figure class="pt-4 pb-5">
+              <div class="avatar">
+                <div class="ring-primary ring-[#ABEF5F] ring-offset-base-100 w-40 rounded-full ring ring-offset-2">
+                  <img src="./assets/mark-zuckerberg.jpg" />
+                </div>
+              </div>
+            </figure>
+            <div class="flex flex-col items-center text-center flex-grow">
+              <p class="font-bold">Mark Zuckerberg</p>
+              <p class="text-sm opacity-70 mt-1 mb-3">CEO, Meta</p>
+              <div class="flex flex-col items-center flex-grow justify-between">
+                <h2 class="card-title text-base font-bold">"The team's efficiency was impressive! They completed our
+                  office
+                  renovation ahead of
+                  schedule without compromising on
+                  quality."</h2>
+                <div class="card-actions mt-4">
+                  <div class="rating">
+                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked="checked" />
+                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div
+            class="card bg-base-100 w-96 p-5 pb-8 shadow-[0px_0px_0px_1px_rgba(0,0,0,0.06),0px_1px_1px_-0.5px_rgba(0,0,0,0.06),0px_3px_3px_-1.5px_rgba(0,0,0,0.06),_0px_6px_6px_-3px_rgba(0,0,0,0.06),0px_12px_12px_-6px_rgba(0,0,0,0.06),0px_24px_24px_-12px_rgba(0,0,0,0.06)] hover:shadow-[0px_10px_1px_rgba(221,_221,_221,_1),_0_10px_20px_rgba(204,_204,_204,_1)] transition duration-300">
+            <figure class="pt-4 pb-5">
+              <div class="avatar">
+                <div class="ring-primary ring-[#ABEF5F] ring-offset-base-100 w-40 rounded-full ring ring-offset-2">
+                  <img src="./assets/Sam-Altman.webp" />
+                </div>
+              </div>
+            </figure>
+            <div class="flex flex-col items-center text-center flex-grow">
+              <p class="font-bold">Sam Altman</p>
+              <p class="text-sm opacity-70 mt-1 mb-3">CEO, OpenAI</p>
+              <div class="flex flex-col items-center flex-grow justify-between">
+                <h2 class="card-title text-base font-bold">"We've been working with this team for over five years. Their
+                  consistency and dedication make them our go-to partner for
+                  all construction projects."</h2>
+                <div class="card-actions mt-4">
+                  <div class="rating">
+                    <input type="radio" name="rating-6" class="mask mask-star-2 bg-orange-400" />
+                    <input type="radio" name="rating-6" class="mask mask-star-2 bg-orange-400" />
+                    <input type="radio" name="rating-6" class="mask mask-star-2 bg-orange-400" />
+                    <input type="radio" name="rating-6" class="mask mask-star-2 bg-orange-400" checked="checked" />
+                    <input type="radio" name="rating-6" class="mask mask-star-2 bg-orange-400" />
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <!-- next project section -->
     <div class="bg-no-repeat bg-center bg-cover h-fit w-full py-24 max-sm:py-8"
       style="background-image: url('./assets/bg.jpg');">
@@ -438,6 +632,7 @@
         </div>
       </div>
     </div>
+
   </main>
   <!-- footer -->
   <footer class="bg-[#1c1c1c] py-24 max-sm:py-9">
