--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
         <div class="navbar-end ">
           <div class="flex gap-3 max-sm:hidden">
             <div
-              class="bg-white h-12 w-12 rounded-full border-2 border-gray-300 flex items-center justify-center cursor-pointer">
+              class="bg-white h-12 w-12 rounded-full border-2 border-gray-300 flex items-center justify-center cursor-pointer hover:shadow-md transition duration-300">
               <i class="fa-solid fa-magnifying-glass text-lg"></i>
             </div>
             <div
-              class="bg-white h-12 w-12 rounded-full  border-2 border-gray-300 flex items-center justify-center cursor-pointer">
+              class="bg-white h-12 w-12 rounded-full  border-2 border-gray-300 flex items-center justify-center cursor-pointer hover:shadow-md transition duration-300">
               <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                 stroke="currentColor" class="size-6">
                 <path stroke-linecap="round" stroke-linejoin="round"
@@ -291,7 +291,7 @@
         </div>
         <div class="flex items-center justify-center">
           <div class="grid grid-cols-3 gap-6 mt-8 max-sm:grid-cols-1 mx-auto">
-            <div class="card p-6 bg-base-100 w-96 shadow-xl">
+            <div class="card p-6 bg-base-100 w-96 shadow-md hover:shadow-xl transition duration-500">
               <figure class="">
                 <img src="./assets/article1.png" alt="Shoes" class="rounded-xl" />
               </figure>
@@ -326,7 +326,7 @@
                 </div>
               </div>
             </div>
-            <div class="card p-6 bg-base-100 w-96 shadow-xl">
+            <div class="card p-6 bg-base-100 w-96 shadow-md hover:shadow-xl transition duration-500">
               <figure class="">
                 <img src="./assets/article2.png" alt="Shoes" class="rounded-xl" />
               </figure>
@@ -361,7 +361,7 @@
                 </div>
               </div>
             </div>
-            <div class="card p-6 bg-base-100 w-96 shadow-xl">
+            <div class="card p-6 bg-base-100 w-96 shadow-md hover:shadow-xl transition duration-500">
               <figure class="">
                 <img src="./assets/article3.png" alt="Shoes" class="rounded-xl" />
               </figure>
@@ -648,11 +648,11 @@
         sleek
         metal accents.</p>
       <div class="flex items-center lg:justify-around max-sm:gap-3 w-[80%] max-sm:flex-col ">
-        <h5 class="text-white text-base font-medium">Home</h5>
-        <h5 class="text-white text-base font-medium">Services</h5>
-        <h5 class="text-white text-base font-medium">Portfolio</h5>
-        <h5 class="text-white text-base font-medium">Blog</h5>
-        <h5 class="text-white text-base font-medium">Contact Us</h5>
+        <h5 class="text-white text-base font-medium btn btn-ghost">Home</h5>
+        <h5 class="text-white text-base font-medium btn btn-ghost">Services</h5>
+        <h5 class="text-white text-base font-medium btn btn-ghost">Portfolio</h5>
+        <h5 class="text-white text-base font-medium btn btn-ghost">Blog</h5>
+        <h5 class="text-white text-base font-medium btn btn-ghost">Contact Us</h5>
       </div>
       <a class="btn bg-bg-btn font-black rounded-full mt-12 max-sm:mt-7">
         <h1>Book Consult</h1>
